--- a/styles/comuns.css
+++ b/styles/comuns.css
@@ -75,19 +75,6 @@ header {
     padding: 15px;
 }
 
-#eventosCinea,
-#eventosAFTeck {
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
-    /* Logos de parceiros devem aparecer completas */
-    background-color: white;
-    /* Fundo branco para logos com transparência */
-    border: solid 5px whitesmoke;
-    border-radius: 25px;
-    padding: 10px;
-}
-
 /* Navegação */
 .navbar-tabs {
     width: 100%;
@@ -161,6 +148,10 @@ header {
     box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
 }
 
+#servicos-info{
+    width: 100%;
+}
+
 .card-icon {
     font-size: 3.5rem;
     color: var(--primary-purple);
@@ -209,9 +200,11 @@ header {
     position: relative;
     overflow: hidden;
     border-radius: 15px;
+    width: 360px;
     height: 300px;
-    background: white;
+    background: rgb(245, 222, 222);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    border: double 10px rgba(246, 242, 242, 0.951);
 }
 
 .partner-overlay {
@@ -279,8 +272,12 @@ footer {
     padding: 3rem 5%;
     text-align: center;
     margin-top: 4rem;
-<<<<<<< HEAD
 }
-=======
+
+.sobreLanuper {
+    text-align: justify;
+    font-size: 1.1rem;
+    color: var(--text-dark);
+    line-height: 1.8;
+    margin: 0 10rem;
 }
->>>>>>> 6651b99ad816c0d47fe6f1d6f089e5a18b727ab3
